[package]
name = "penguinwars-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
bevy_egui = "0.13.0"
bevy_rapier3d = { version="0.13.2", features = [ "simd-stable" ]}
futures-lite = "1.11.3"
# voxels = { path = "../voxels" }
voxels = { git = "https://github.com/ironverse/voxels.git", branch="main" }




